data/forge_javadoc/1.7.10/raw/net/minecraft/scoreboard/ScorePlayerTeam.md
---
title: "ScorePlayerTeam"
description: "public class ScorePlayerTeam extends Team"
package: "net/minecraft/scoreboard"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/scoreboard/ScorePlayerTeam.html"
sourceType: javadoc
---

# ScorePlayerTeam

**Inheritance:** java.lang.Object → net.minecraft.scoreboard.Team → net.minecraft.scoreboard.ScorePlayerTeam

## Class signature

```java
public class ScorePlayerTeam extends Team
```

## Constructors

- `ScorePlayerTeam(Scoreboard p_i2308_1_, java.lang.String p_i2308_2_)`

## Methods

- `static java.lang.String formatPlayerName(Team p_96667_0_, java.lang.String p_96667_1_)`
- `java.lang.String formatString(java.lang.String p_142053_1_)`
- `java.lang.String func_96669_c()`
- `boolean func_98297_h()`
- `void func_98298_a(int p_98298_1_)`
- `int func_98299_i()`
- `boolean getAllowFriendlyFire()`
- `java.lang.String getColorPrefix()`
- `java.lang.String getColorSuffix()`
- `java.util.Collection getMembershipCollection()`
- `java.lang.String getRegisteredName()`
- `void setAllowFriendlyFire(boolean p_96660_1_)`
- `void setNamePrefix(java.lang.String p_96666_1_)`
- `void setNameSuffix(java.lang.String p_96662_1_)`
- `void setSeeFriendlyInvisiblesEnabled(boolean p_98300_1_)`
- `void setTeamName(java.lang.String p_96664_1_)`
